<resources>
    <string name="app_name">Social Network App</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="prompt_login">Enter login</string>
    <string name="login_data">You have entered a wrong login or password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="prompt_name">Name</string>
    <string name="friends">Friends</string>
    <string name="posts">Posts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends_posts">Friends posts</string>
    <string name="name_label">Name:</string>
    <string name="login_label">Login:</string>
    <string name="email_label">E-mail:</string>
    <string name="change_password">Change password</string>
    <string name="change_name">Change name</string>
    <string name="comments">Comments</string>
    <string name="create">Create</string>
    <string name="all_users">All users</string>
</resources>
