<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="androidx.lifecycle.MutableLiveData"/>
        <import type="android.view.View"/>

        <variable name="user" type="com.github.dzeko14.socialnetworkapp.model.User"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activity.UserDetailActivity">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name"
                android:text="@{user.name}"
                app:layout_constraintTop_toTopOf="@+id/name_label"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                tools:text="Name" app:layout_constraintStart_toEndOf="@+id/name_label" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="@+id/name_label"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login"
                android:text="@{user.login}"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toTopOf="@+id/login_label"
                app:layout_constraintBottom_toBottomOf="@+id/login_label"
                app:layout_constraintStart_toEndOf="@+id/login_label" android:layout_marginStart="8dp"
                tools:text="essegseg"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:text="@{user.email}"
                android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/textView7"
                app:layout_constraintTop_toTopOf="@+id/textView7" app:layout_constraintBottom_toBottomOf="@+id/textView7"
                tools:text="afaf@afaf.com"/>
        <TextView
                android:text="@string/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/name_label"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="148dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/login_label" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/name_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/login_label"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
        />
        <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/change_password" app:layout_constraintStart_toStartOf="@+id/button2"
                android:text="@string/change_password" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button2" app:layout_constraintEnd_toEndOf="@+id/button2"
        />
        <Button
                android:text="@string/change_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/button2" android:layout_marginTop="24dp"
                app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="32dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
