<?xml version="1.0" encoding="utf-8"?>
<layout             xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="androidx.lifecycle.MutableLiveData"/>
        <import type="com.github.dzeko14.socialnetworkapp.viewmodel.LoginViewModel.State"/>

        <variable name="viewModel"
                  type="com.github.dzeko14.socialnetworkapp.viewmodel.LoginViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".view.activity.LoginActivity">

        <EditText
                android:id="@+id/login"
                android:visibility="@{viewModel.state == State.LOGIN_IN_PROCESS ? View.GONE : View.VISIBLE}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="24dp"
                android:text="@={viewModel.login}"
                android:hint="@string/prompt_login"
                android:inputType="text"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="0dp"
                android:visibility="@{viewModel.state == State.LOGIN_IN_PROCESS ? View.GONE : View.VISIBLE}"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:text="@={viewModel.password}"
                android:hint="@string/enter_password_hint"
                android:imeActionLabel="@string/action_sign_in_short"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login"/>

        <Button
                android:id="@+id/login_btn"
                android:enabled="@{viewModel.password.length > 5}"
                android:onClick="@{() -> viewModel.login()}"
                android:visibility="@{viewModel.state == State.LOGIN_IN_PROCESS ? View.GONE : View.VISIBLE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:text="@string/action_sign_in"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                app:layout_constraintVertical_bias="0.2" app:layout_constraintEnd_toStartOf="@+id/register_btn"
                app:layout_constraintHorizontal_bias="0.5"/>

        <ProgressBar
                android:id="@+id/loading"
                android:visibility="@{viewModel.state == State.LOGIN_IN_PROCESS ? View.VISIBLE : View.GONE}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"/>
        <Button
                android:text="@string/register"
                android:onClick="@{() -> viewModel.register()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/register_btn"
                app:layout_constraintTop_toTopOf="@+id/login_btn"
                app:layout_constraintBottom_toBottomOf="@+id/login_btn" app:layout_constraintVertical_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/login_btn" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.5"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
