<?xml version="1.0" encoding="utf-8"?>
<layout             xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="androidx.lifecycle.MutableLiveData"/>
        <import type="com.github.dzeko14.socialnetworkapp.viewmodel.RegisterViewModel.State"/>

        <variable name="viewModel"
                  type="com.github.dzeko14.socialnetworkapp.viewmodel.RegisterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.activity.RegisterActivity">
        <EditText
                android:layout_width="wrap_content"
                android:visibility="@{viewModel.state == State.IN_PROGRESS ? View.GONE : View.VISIBLE}"
                android:text="@={viewModel.login}"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/login" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:hint="@string/login"/>
        <EditText
                android:layout_width="wrap_content"
                android:visibility="@{viewModel.state == State.IN_PROGRESS ? View.GONE : View.VISIBLE}"
                android:text="@={viewModel.password}"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:hint="@string/enter_password_hint"
                android:id="@+id/password" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/login"
                app:layout_constraintStart_toStartOf="@+id/login" app:layout_constraintEnd_toEndOf="@+id/login"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:visibility="@{viewModel.state == State.IN_PROGRESS ? View.GONE : View.VISIBLE}"
                android:text="@={viewModel.email}"
                android:ems="10"
                android:id="@+id/email"
                android:hint="@string/prompt_email"
                app:layout_constraintTop_toBottomOf="@+id/password" app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintEnd_toEndOf="@+id/password" android:layout_marginTop="8dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/prompt_name"
                android:visibility="@{viewModel.state == State.IN_PROGRESS ? View.GONE : View.VISIBLE}"
                android:text="@={viewModel.name}"
                android:ems="10"
                android:id="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/email" app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintEnd_toEndOf="@+id/email" android:layout_marginTop="8dp"/>
        <Button
                android:text="@android:string/ok"
                android:onClick="@{() -> viewModel.register()}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/apply_btn" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
